--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "bcore": "^0.0.21",
+    "chalk": "^2.3.2",
     "crypto": "^1.0.1",
     "lodash": "^4.17.5",
     "request": "^2.85.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "flow-bin": "^0.54.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-flow-vars": "^0.5.0",
