--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "chalk": "^2.3.2",
     "crypto": "^1.0.1",
     "deepmerge": "^2.1.0",
+    "https-proxy-agent": "^2.2.0",
     "lodash": "^4.17.5",
     "md5": "^2.2.1",
     "optimist": "^0.6.1",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "ws": "^5.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
