--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "https-proxy-agent": "^2.2.0",
     "lodash": "^4.17.5",
     "md5": "^2.2.1",
+    "moment": "^2.22.0",
     "optimist": "^0.6.1",
     "request": "^2.85.0",
     "ws": "^5.1.0"
