--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcore": "^0.0.21",
     "chalk": "^2.3.2",
     "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "deepmerge": "^2.1.0",
     "https-proxy-agent": "^2.2.0",
     "lodash": "^4.17.5",
