--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "md5": "^2.2.1",
     "moment": "^2.22.1",
     "optimist": "^0.6.1",
+    "pako": "^1.0.6",
     "request": "^2.85.0",
     "ws": "^5.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
-    "flow-bin": "^0.54.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-react": "^6.8.0",
+    "flow-bin": "^0.54.1"
   }
 }
