--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^3.1.9-1",
     "deepmerge": "^2.1.0",
     "https-proxy-agent": "^2.2.0",
+    "liquid-tap": "^0.3.3",
     "lodash": "^4.17.5",
     "md5": "^2.2.1",
     "moment": "^2.22.1",
