--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "deepmerge": "^2.1.0",
+    "got": "^11.8.0",
     "https-proxy-agent": "^2.2.0",
     "liquid-tap": "^0.3.3",
     "lodash": "^4.17.5",
